--- a/techdescription.css
+++ b/techdescription.css
@@ -2,32 +2,25 @@ body{
     margin-left:0%;
 }
 .h3style{
-  color:#393e46;
+  color:#414141;
   background-color:lightgrey;
 }
 .labelstyle{
   color:#738598;
 }
-.labelmargin{
-  margin-left:-4%;
-  margin-top: 4%;
-}
 .formstyle{
-  margin-left:-5%;
+  margin-left:-10%;
   width:110%;
 }
 .buttonstyle{
   margin-left:75%;
   background-color:#e83e6c;
   border: transparent;
+  width:20%;
 }
 .cardstyle{
   margin-top: 10%;
 }
 .istyle{
   color:lightgrey;
-}
-.submitstyle{
-  border:transparent;
-  margin-left:5%;
 }
